Fix testimonial item cutoff safari bug

--- a/src/components/testimonial-item/testimonial-item.module.scss
+++ b/src/components/testimonial-item/testimonial-item.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 .testimonial_item {
-  margin-top: $spacingSM;
+  margin: $spacingSM 0 $spacingXS 0;
   background: #fff;
   border-radius: 16px;
   padding: 24px;
